--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -103,6 +103,20 @@ sndbuf 2048
 # for this option is 256.
 rcvbuf 256
 
+# Sets the deadline for future Read calls.
+#
+# Examples:
+#
+# read.timeout 5s
+read.timeout 5s
+
+# Sets the deadline for future Write calls.
+#
+# Examples:
+#
+# write.timeout 5s
+write.timeout 5s
+
 [crypto]
 # First handshake use rsa encrypt the request. 
 # set the rsa private key pem file path.
@@ -111,3 +125,34 @@ rcvbuf 256
 #
 # rsa.private ./pri.pem
 rsa.private ./pri.pem
+
+[bucket]
+# bucket split a big map into small map.
+#
+# Examples:
+#
+# bucket.num 1024
+bucket.num 1024
+
+# proto buffer num in one bucket for client send.
+#
+# Examples:
+#
+# cli.proto.num 1024
+cli.proto.num 1024
+
+# proto buffer num in one bucket for server send.
+#
+# Examples:
+#
+# svr.proto.num 1024
+svr.proto.num 1024
+
+# channel cache num per bucket
+#
+# Examples:
+#
+# channel.num 1024
+channel.num 1024
+
+
