--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -103,12 +103,12 @@ sndbuf 2048
 # for this option is 256.
 rcvbuf 256
 
-# Sets the deadline for future Read calls.
+# Sets the deadline for init handshake.
 #
 # Examples:
 #
-# read.timeout 5s
-read.timeout 5s
+# handshake.timeout 5s
+handshake.timeout 5s
 
 # Sets the deadline for future Write calls.
 #
@@ -116,6 +116,20 @@ read.timeout 5s
 #
 # write.timeout 5s
 write.timeout 5s
+
+# Sets the reader buffer instance.
+#
+# Examples:
+#
+# read.timeout 5s
+read.buf 1024
+
+# Sets the writer buffer instance.
+#
+# Examples:
+#
+# read.timeout 5s
+write.buf 1024
 
 [crypto]
 # First handshake use rsa encrypt the request. 
