--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -169,4 +169,7 @@ svr.proto.num 1024
 # channel.num 1024
 channel.num 1024
 
-
+[push]
+http.push.bind localhost:8082
+read.timeout 5s
+write.timeout 5s
