--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -122,14 +122,19 @@ write.timeout 5s
 # Examples:
 #
 # read.timeout 5s
-read.buf 1024
+readbuf 2048
 
 # Sets the writer buffer instance.
 #
 # Examples:
 #
 # read.timeout 5s
-write.buf 1024
+writebuf 2048
+
+readbuf.size 1024
+writebuf.size 1024
+timer 1024
+timer.size 1024
 
 [crypto]
 # First handshake use rsa encrypt the request. 
