--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -79,7 +79,7 @@ log ./log.xml
 # tcp.bind 192.168.1.100:6969,10.0.0.1:7069
 # tcp.bind 127.0.0.1:6969
 # tcp.bind 0.0.0.0:6969
-tcp.bind 10.33.156.249:8080
+tcp.bind localhost:8080
 
 # SO_SNDBUF and SO_RCVBUF are options to adjust the normal buffer sizes 
 # allocated for output and input buffers, respectively.  The buffer size may 
