--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -109,6 +109,8 @@ rcvbuf 256
 #
 # handshake.timeout 5s
 handshake.timeout 5s
+handshake.proto 1
+handshake.proto.size 1024
 
 # Sets the deadline for future Write calls.
 #
