--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -93,7 +93,7 @@ tcp.bind localhost:8080
 # /proc/sys/net/core/wmem_default file and the maximum allowed value is set by 
 # the /proc/sys/net/core/wmem_max file.  The minimum (doubled) value for this 
 # option is 2048.
-sndbuf 2048
+tcp.sndbuf 2048
 
 # Sets the maximum socket receive buffer in bytes. The kernel doubles this 
 # value (to allow space for bookkeeping overhead) when it is set using 
@@ -101,7 +101,9 @@ sndbuf 2048
 # /proc/sys/net/core/rmem_default file, and the maximum allowed value is set by 
 # the /proc/sys/net/core/rmem_max file. The minimum (doubled) value 
 # for this option is 256.
-rcvbuf 256
+tcp.rcvbuf 256
+
+tcp.keepalive 0
 
 # Sets the deadline for init handshake.
 #
