--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -181,5 +181,5 @@ channel.num 1024
 
 [push]
 http.push.bind localhost:8082
-read.timeout 5s
-write.timeout 5s
+http.read.timeout 5s
+http.write.timeout 5s
