add websocket support

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -67,19 +67,19 @@ dir ./
 # log /xxx/xxx/log.xml
 log ./log.xml
 
-[proto]
+[tcp]
 # By default comet listens for connections from all the network interfaces
-# available on the server on 6969 port. It is possible to listen to just one or 
-# multiple interfaces using the "tcp.bind" configuration directive, followed by 
+# available on the server on 8080 port. It is possible to listen to just one or 
+# multiple interfaces using the "bind" configuration directive, followed by 
 # one or more IP addresses and port.
 #
 # Examples:
 #
 # Note this directive is only support "tcp" protocol
-# tcp.bind 192.168.1.100:6969,10.0.0.1:7069
-# tcp.bind 127.0.0.1:6969
-# tcp.bind 0.0.0.0:6969
-tcp.bind localhost:8080
+# bind 192.168.1.100:8080,10.0.0.1:8080
+# bind 127.0.0.1:8080
+# bind 0.0.0.0:8080
+bind localhost:8080
 
 # SO_SNDBUF and SO_RCVBUF are options to adjust the normal buffer sizes 
 # allocated for output and input buffers, respectively.  The buffer size may 
@@ -93,7 +93,7 @@ tcp.bind localhost:8080
 # /proc/sys/net/core/wmem_default file and the maximum allowed value is set by 
 # the /proc/sys/net/core/wmem_max file.  The minimum (doubled) value for this 
 # option is 2048.
-tcp.sndbuf 2048
+sndbuf 2048
 
 # Sets the maximum socket receive buffer in bytes. The kernel doubles this 
 # value (to allow space for bookkeeping overhead) when it is set using 
@@ -101,10 +101,25 @@ tcp.sndbuf 2048
 # /proc/sys/net/core/rmem_default file, and the maximum allowed value is set by 
 # the /proc/sys/net/core/rmem_max file. The minimum (doubled) value 
 # for this option is 256.
-tcp.rcvbuf 256
+rcvbuf 256
 
-tcp.keepalive 0
+keepalive 0
 
+[websocket]
+# By default comet listens for connections from all the network interfaces
+# available on the server on 8090 port. It is possible to listen to just one or 
+# multiple interfaces using the "tcp.bind" configuration directive, followed by 
+# one or more IP addresses and port.
+#
+# Examples:
+#
+# Note this directive is only support "websocket" protocol
+# bind 192.168.1.100:8090,10.0.0.1:8090
+# bind 127.0.0.1:8090
+# bind 0.0.0.0:8090
+bind localhost:8090
+
+[proto]
 # Sets the deadline for init handshake.
 #
 # Examples:
