add websocket support

--- a/comet/client/client-example.conf
+++ b/comet/client/client-example.conf
@@ -68,6 +68,9 @@ dir ./
 log ./log.xml
 
 [proto]
+
+type 1
+
 # By default comet listens for connections from all the network interfaces
 # available on the server on 6969 port. It is possible to listen to just one or 
 # multiple interfaces using the "tcp.bind" configuration directive, followed by 
@@ -79,6 +82,8 @@ log ./log.xml
 # tcp.addr 127.0.0.1:6969
 # tcp.addr 0.0.0.0:6969
 tcp.addr localhost:8080
+
+websocket.addr localhost:8090
 
 # SO_SNDBUF and SO_RCVBUF are options to adjust the normal buffer sizes 
 # allocated for output and input buffers, respectively.  The buffer size may 
