add http long polling

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -106,9 +106,9 @@ rcvbuf 256
 keepalive 0
 
 [websocket]
-# By default comet listens for connections from all the network interfaces
+# By default comet websocket listens for connections from all the network interfaces
 # available on the server on 8090 port. It is possible to listen to just one or 
-# multiple interfaces using the "tcp.bind" configuration directive, followed by 
+# multiple interfaces using the "bind" configuration directive, followed by 
 # one or more IP addresses and port.
 #
 # Examples:
@@ -118,6 +118,20 @@ keepalive 0
 # bind 127.0.0.1:8090
 # bind 0.0.0.0:8090
 bind localhost:8090
+
+[http]
+# By default comet http listens for connections from all the network interfaces
+# available on the server on 8070 port. It is possible to listen to just one or 
+# multiple interfaces using the "bind" configuration directive, followed by 
+# one or more IP addresses and port.
+#
+# Examples:
+#
+# Note this directive is only support "websocket" protocol
+# bind 192.168.1.100:8070,10.0.0.1:8070
+# bind 127.0.0.1:8070
+# bind 0.0.0.0:8070
+bind localhost:8070
 
 [proto]
 # Sets the deadline for init handshake.
