--- a/router/router-example.conf
+++ b/router/router-example.conf
@@ -67,29 +67,6 @@ dir ./
 # log /xxx/xxx/log.xml
 log ./log.xml
 
-# http listen and service
-[http]
-# The http server ip:port bind.
-#
-# bind localhost:8080
-bind localhost:8080
-
-# The http read timeout.
-#
-# If read request of time more than read.timeout value,
-# then close the request.
-#
-# read.timeout 5s
-read.timeout 5s
-
-# The http write timeout.
-#
-# If write response of time more than write.timeout value,
-# then close the response.
-#
-# write.timeout 5s
-write.timeout 5s
-
 # rpc listen and service
 [rpc]
 # The rpc server ip:port bind.
@@ -98,16 +75,7 @@ write.timeout 5s
 bind 127.0.0.1:9090
 
 [bucket]
-# Sub bucket split a big map into small map.
-#
-# Examples:
-#
-# bucket.num 16
-subbucket.num 16
-
-# Tpoic bucket split a big map into small map.
-#
-# Examples:
-#
-# bucket.num 16
-topicbucket.num 16
+bucket 16
+session 16
+server 5
+cleaner 16
