--- a/logic/logic-example.conf
+++ b/logic/logic-example.conf
@@ -48,8 +48,11 @@ pprof.bind localhost:7171
 # pprof.bind 192.168.1.100:7171,10.0.0.1:7172
 # pprof.bind 127.0.0.1:7171
 # pprof.bind 0.0.0.0:7171
-bind 127.0.0.1:9090
-rpc.bind localhost:7172
+rpc.bind 0.0.0.0:7170
+
+http.bind 0.0.0.0:7172
+http.read.timeout 5s
+http.write.timeout 5s
 
 # The working directory.
 #
@@ -67,4 +70,5 @@ dir ./
 log ./log.xml
 
 [router]
-addrs localhost:6972
+addrs localhost:7270
+retry 60s
