add server id support

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -67,6 +67,11 @@ dir ./
 # log /xxx/xxx/log.xml
 log ./log.xml
 
+# The server id
+#
+# the server id must unique in all the comet nodes.
+server.id 1
+
 [tcp]
 # By default comet listens for connections from all the network interfaces
 # available on the server on 8080 port. It is possible to listen to just one or 
