add comet config

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -207,3 +207,7 @@ http.push.bind localhost:8082
 http.read.timeout 5s
 http.write.timeout 5s
 rpc.push.bind localhost:8092
+
+[logic]
+addr 127.0.0.1:7170
+retry 60s
