--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -39,7 +39,7 @@ pidfile /tmp/comet.pid
 # pprof.bind 192.168.1.100:6971,10.0.0.1:6971
 # pprof.bind 127.0.0.1:6971
 # pprof.bind 0.0.0.0:6971
-pprof.bind localhost:6971
+pprof.bind 0.0.0.0:6971
 
 # This is used by comet service get stat info by http.
 # By default comet pprof listens for connections from local interfaces on 6972
@@ -84,7 +84,7 @@ server.id 1
 # bind 192.168.1.100:8080,10.0.0.1:8080
 # bind 127.0.0.1:8080
 # bind 0.0.0.0:8080
-bind localhost:8080
+bind 0.0.0.0:8080
 
 # SO_SNDBUF and SO_RCVBUF are options to adjust the normal buffer sizes 
 # allocated for output and input buffers, respectively.  The buffer size may 
@@ -122,7 +122,7 @@ keepalive 0
 # bind 192.168.1.100:8090,10.0.0.1:8090
 # bind 127.0.0.1:8090
 # bind 0.0.0.0:8090
-bind localhost:8090
+bind 0.0.0.0:8090
 
 [http]
 # By default comet http listens for connections from all the network interfaces
@@ -136,7 +136,7 @@ bind localhost:8090
 # bind 192.168.1.100:8070,10.0.0.1:8070
 # bind 127.0.0.1:8070
 # bind 0.0.0.0:8070
-bind localhost:8070
+bind 0.0.0.0:8070
 
 [proto]
 # Sets the deadline for init handshake.
@@ -203,11 +203,10 @@ svr.proto.num 1024
 channel.num 1024
 
 [push]
-http.push.bind localhost:8082
+http.push.bind 0.0.0.0:8082
 http.read.timeout 5s
 http.write.timeout 5s
-rpc.push.bind localhost:8092
+rpc.push.bind 0.0.0.0:8092
 
 [logic]
 addr 127.0.0.1:7170
-retry 60s
