--- a/logic/logic-example.conf
+++ b/logic/logic-example.conf
@@ -39,7 +39,7 @@ pidfile /tmp/logic.pid
 # pprof.bind 192.168.1.100:7171,10.0.0.1:7171
 # pprof.bind 127.0.0.1:7171
 # pprof.bind 0.0.0.0:7171
-pprof.bind localhost:7171
+pprof.bind 0.0.0.0:7171
 
 # The rpc server ip:port bind.
 #
@@ -71,4 +71,3 @@ log ./log.xml
 
 [router]
 addrs localhost:7270
-retry 60s
