--- a/router/router-example.conf
+++ b/router/router-example.conf
@@ -39,7 +39,7 @@ pidfile /tmp/router.pid
 # pprof.bind 192.168.1.100:7271,10.0.0.1:7271
 # pprof.bind 127.0.0.1:7271
 # pprof.bind 0.0.0.0:7271
-pprof.bind localhost:7271
+pprof.bind 0.0.0.0:7271
 
 # This is used by router service get stat info by http.
 # By default router pprof listens for connections from local interfaces on 6972
@@ -50,7 +50,7 @@ pprof.bind localhost:7271
 # stat.bind 192.168.1.100:7272,10.0.0.1:7273
 # stat.bind 127.0.0.1:7272
 # stat.bind 0.0.0.0:7272
-stat.bind localhost:7272
+stat.bind 0.0.0.0:7272
 
 # The working directory.
 #
@@ -72,7 +72,7 @@ log ./log.xml
 # The rpc server ip:port bind.
 #
 # bind localhost:8092
-bind 127.0.0.1:7270
+bind 0.0.0.0:7270
 
 [bucket]
 bucket 16
