--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -203,11 +203,26 @@ svr.proto.num 1024
 channel.num 1024
 
 [push]
-http.push.bind localhost:8082
+http.network tcp
+http.bind localhost:8082
+
 http.read.timeout 5s
 http.write.timeout 5s
-rpc.push.bind localhost:8092
+
+rpc.network tcp
+rpc.bind localhost:8092
 
 [logic]
+# This is used by comet service connect logic service set network.
+#
+# Examples:
+#
+# network tcp
+network tcp
+
+# This is used by comet service connect logic service set address.
+#
+# Examples:
+#
+# addr 0.0.0.0:6971
 addr 127.0.0.1:7170
-retry 60s
