--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -203,14 +203,14 @@ svr.proto.num 1024
 channel.num 1024
 
 [push]
-http.network tcp
-http.bind localhost:8082
+http.networks tcp
+http.addrs localhost:8082
 
 http.read.timeout 5s
 http.write.timeout 5s
 
-rpc.network tcp
-rpc.bind localhost:8092
+rpc.networks tcp
+rpc.addrs localhost:8092
 
 [logic]
 # This is used by comet service connect logic service set network.
