--- a/logic/logic-example.conf
+++ b/logic/logic-example.conf
@@ -36,21 +36,24 @@ pidfile /tmp/logic.pid
 #
 # Examples:
 #
-# pprof.bind 192.168.1.100:7171,10.0.0.1:7171
-# pprof.bind 127.0.0.1:7171
-# pprof.bind 0.0.0.0:7171
-pprof.bind localhost:7171
+# pprof.addrs 192.168.1.100:7171,10.0.0.1:7171
+# pprof.addrs 127.0.0.1:7171
+# pprof.addrs 0.0.0.0:7171
+pprof.addrs localhost:7171
 
 # The rpc server ip:port bind.
 #
 # Examples:
 #
-# pprof.bind 192.168.1.100:7171,10.0.0.1:7172
-# pprof.bind 127.0.0.1:7171
-# pprof.bind 0.0.0.0:7171
-rpc.bind 0.0.0.0:7170
+# rpc.addrs 192.168.1.100:7171,10.0.0.1:7172
+# rpc.addrs 127.0.0.1:7171
+# rpc.addrs 0.0.0.0:7171
+rpc.networks tcp
+rpc.addrs 0.0.0.0:7170
 
-http.bind 0.0.0.0:7172
+http.networks tcp
+http.addrs 0.0.0.0:7172
+
 http.read.timeout 5s
 http.write.timeout 5s
 
@@ -70,5 +73,5 @@ dir ./
 log ./log.xml
 
 [router]
+networks tcp
 addrs localhost:7270
-retry 60s
