--- a/logic/job/pushs/job-example.conf
+++ b/logic/job/pushs/job-example.conf
@@ -6,7 +6,9 @@ zookeeper.list 172.16.4.193:2181
 topic = kafka_topic_pushs
 [comets]
 1 172.16.0.238:8092
-2 172.16.0.239:8092
-3 172.16.0.250:8092
+#2 172.16.0.239:8092
 [router]
-addr 172.16.0.238:7270
+networks tcp
+[router.addrs]
+1 localhost:7270
+#2 localhost:7271
