--- a/router/router-example.conf
+++ b/router/router-example.conf
@@ -70,11 +70,10 @@ log ./log.xml
 # rpc listen and service
 [rpc]
 
-networks tcp
-# The rpc server ip:port bind.
+# The rpc server network@ip:port bind.
 #
 # bind localhost:8092
-addrs 127.0.0.1:7270
+addrs tcp@127.0.0.1:7270
 
 [bucket]
 bucket 16
