--- a/logic/logic-example.conf
+++ b/logic/logic-example.conf
@@ -48,9 +48,9 @@ pprof.addrs localhost:7171
 # rpc.addrs 192.168.1.100:7171,10.0.0.1:7172
 # rpc.addrs 127.0.0.1:7171
 # rpc.addrs 0.0.0.0:7171
-rpc.addrs tcp@0.0.0.0:7170
+rpc.addrs tcp@localhost:7170
 
-http.addrs tcp@0.0.0.0:7172
+http.addrs tcp@localhost:7172
 
 http.read.timeout 5s
 http.write.timeout 5s
