fix job rpc connect

--- a/comet/client/client-example.conf
+++ b/comet/client/client-example.conf
@@ -81,7 +81,7 @@ type 0
 # Note this directive is only support "tcp" protocol
 # tcp.addr 127.0.0.1:6969
 # tcp.addr 0.0.0.0:6969
-tcp.addr localhost:8080
+tcp.addr 172.16.4.176:8080
 
 websocket.addr localhost:8090
 
