--- a/logic/job/push/job-example.conf
+++ b/logic/job/push/job-example.conf
@@ -3,7 +3,7 @@ log ./log.xml
 [kafka]
 zookeeper.list 172.16.4.193:2181
 #zookeeper.root /push_job
-topic = kafka_topic_push
+topic kafka_topic_push
 [comets]
 1 172.16.0.238:8092
 2 172.16.0.239:8092
