--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -65,7 +65,7 @@ dir ./
 # Examples:
 #
 # log /xxx/xxx/log.xml
-log ./log.xml
+log ./comet_log.xml
 
 # The server id
 #
@@ -84,7 +84,7 @@ server.id 1
 # bind 192.168.1.100:8080,10.0.0.1:8080
 # bind 127.0.0.1:8080
 # bind 0.0.0.0:8080
-bind localhost:8080
+bind 0.0.0.0:8080
 
 # SO_SNDBUF and SO_RCVBUF are options to adjust the normal buffer sizes 
 # allocated for output and input buffers, respectively.  The buffer size may 
@@ -122,7 +122,7 @@ keepalive 0
 # bind 192.168.1.100:8090,10.0.0.1:8090
 # bind 127.0.0.1:8090
 # bind 0.0.0.0:8090
-bind localhost:8090
+bind 0.0.0.0:8090
 
 [http]
 # By default comet http listens for connections from all the network interfaces
