--- a/logic/job/job-example.conf
+++ b/logic/job/job-example.conf
@@ -5,7 +5,7 @@ zookeeper.list 127.0.0.1:2181
 #zookeeper.root /push_job
 topic KafkaPushsTopic
 [comets]
-1 127.0.0.1:8092
+1 tcp@127.0.0.1:8092
 #2 127.0.0.2:8092
 [push]
 chan 4
