add room support

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -202,6 +202,20 @@ svr.proto.num 1024
 # channel.num 1024
 channel.num 1024
 
+# room cache num per bucket
+#
+# Examples:
+#
+# room.num 1024
+room.num 50
+
+# room's channel cache num per bucket
+#
+# Examples:
+#
+# room.num 1024
+room.channel.num 1024
+
 [push]
 rpc.addrs tcp@localhost:8092
 
