--- a/comet/client/client-example.conf
+++ b/comet/client/client-example.conf
@@ -67,6 +67,12 @@ dir ./
 # log /xxx/xxx/log.xml
 log ./log.xml
 
+[cert]
+# generate certificate command:
+# openssl genrsa -out key.pem 2048
+# openssl req -new -x509 -key key.pem -out cert.pem -days 3650
+cert.file ../../source/cert.pem
+
 [proto]
 
 type 0
