--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -124,6 +124,18 @@ keepalive 0
 # bind 0.0.0.0:8090
 bind 0.0.0.0:8090
 
+# wheather needs open tls or not
+# if set true you must set the cert and private file configuration
+tls.open false
+# It is available if tls.open set true
+tls.bind 0.0.0.0:8095
+
+# generate certificate command:
+# openssl genrsa -out key.pem 2048
+# openssl req -new -x509 -key key.pem -out cert.pem -days 3650
+cert.file ../source/cert.pem
+private.file ../source/private.pem
+
 [http]
 # By default comet http listens for connections from all the network interfaces
 # available on the server on 8070 port. It is possible to listen to just one or 
