--- a/router/router-example.conf
+++ b/router/router-example.conf
@@ -73,7 +73,7 @@ log ./router_log.xml
 # The rpc server network@ip:port bind.
 #
 # bind localhost:8092
-addrs tcp@127.0.0.1:7270
+addrs tcp@localhost:7270
 
 [bucket]
 bucket 16
