--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -72,6 +72,13 @@ log ./comet_log.xml
 # the server id must unique in all the comet nodes.
 server.id 1
 
+# Debug setting the debug logs open or not (heavy calls)
+#
+#  Examples:
+#
+# debug 1
+debug 1
+
 [tcp]
 # By default comet listens for connections from all the network interfaces
 # available on the server on 8080 port. It is possible to listen to just one or 
