use room speed control

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -117,6 +117,26 @@ rcvbuf 256
 
 keepalive 0
 
+# Sets the reader buffer instance.
+#
+# Examples:
+#
+# read.timeout 5s
+readbuf 2048
+
+# Sets the writer buffer instance.
+#
+# Examples:
+#
+# read.timeout 5s
+writebuf 2048
+
+# read buffer size
+readbuf.size 1024
+
+# write buffer size
+writebuf.size 1024
+
 [websocket]
 # By default comet websocket listens for connections from all the network interfaces
 # available on the server on 8090 port. It is possible to listen to just one or 
@@ -157,6 +177,30 @@ private.file ../source/private.pem
 # bind 0.0.0.0:8070
 bind localhost:8070
 
+[push]
+# comet service listen address
+#
+# Examples:
+#
+# rpc.addrs tcp@localhost:7170
+rpc.addrs tcp@localhost:8092
+
+[timer]
+# timer instance
+#
+# Examples:
+#
+# num 1024
+num  1024
+
+# timer instance size
+#
+# Examples:
+#
+# size 1024
+size 1024
+
+
 [proto]
 # Sets the deadline for init handshake.
 #
@@ -172,71 +216,75 @@ handshake.timeout 5s
 # write.timeout 5s
 write.timeout 5s
 
-# Sets the reader buffer instance.
-#
-# Examples:
-#
-# read.timeout 5s
-readbuf 2048
-
-# Sets the writer buffer instance.
-#
-# Examples:
-#
-# read.timeout 5s
-writebuf 2048
-
-readbuf.size 1024
-writebuf.size 1024
-
-timer 1
-timer.size 1024
-
-[bucket]
-# bucket split a big map into small map.
-#
-# Examples:
-#
-# bucket.num 1024
-bucket.num 1024
-
+[channel]
 # proto buffer num in one bucket for client send.
 #
 # Examples:
 #
-# cli.proto.num 1024
-cli.proto.num 1024
+# cli.proto 20
+cli.proto 20
 
 # proto buffer num in one bucket for server send.
 #
 # Examples:
 #
-# svr.proto.num 1024
-svr.proto.num 1024
+# svr.proto 100
+svr.proto 100
 
-# channel cache num per bucket
+[bucket]
+# bucket split N(num) instance from a big map into small map.
 #
 # Examples:
 #
-# channel.num 1024
-channel.num 1024
+# num 1024
+num 1024
 
-# room cache num per bucket
+# channel cache num
 #
 # Examples:
 #
-# room.num 1024
-room.num 50
+# channel 1024
+channel 1024
 
-# room's channel cache num per bucket
+# room cache num
 #
 # Examples:
 #
-# room.channel.num 1024
-room.channel.num 1024
+# room 1024
+room 1024
 
-[push]
-rpc.addrs tcp@localhost:8092
+[room]
+# room's channel cache num
+#
+# Examples:
+#
+# channel 1024
+channel 1024
+
+# room's proto cache num
+#
+# Examples:
+#
+# proto 100
+proto 100
+
+# room's batch push num
+#
+# Examples:
+#
+# batch 20
+batch 20
+
+# room's signal push msgs duration 
+# Examples:
+#
+# signal 1s
+signal 1s
 
 [logic]
+# logic service rpc address
+#
+# Examples:
+#
+# rpc.addrs tcp@localhost:7170
 rpc.addrs tcp@localhost:7170
