fix tcp lock bug

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -216,12 +216,12 @@ handshake.timeout 5s
 # write.timeout 5s
 write.timeout 5s
 
-# proto buffer num in one bucket for server send.
+# proto buffer num in one bucket for server/client send.
 #
 # Examples:
 #
 # svr.proto 100
-svr.proto 100
+proto 100
 
 [bucket]
 # bucket split N(num) instance from a big map into small map.
