add bufio, bytes.Buffer, bytes.Pool improve GC performance

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -117,25 +117,39 @@ rcvbuf 256
 
 keepalive 0
 
+# Sets the reader number, used in round-robin selection.
+#
+# Examples:
+#
+# reader 1024
+reader 1024
+
 # Sets the reader buffer instance.
 #
 # Examples:
 #
-# read.timeout 5s
-readbuf 2048
+# readbuf 1024
+readbuf 1024
+
+# read buffer size
+readbuf.size 512
+
+# Sets the writer number, used in round-robin selection.
+#
+# Examples:
+#
+# writer 1024
+writer 1024
 
 # Sets the writer buffer instance.
 #
 # Examples:
 #
-# read.timeout 5s
-writebuf 2048
-
-# read buffer size
-readbuf.size 1024
+# writebuf 1024
+writebuf 1024
 
 # write buffer size
-writebuf.size 1024
+writebuf.size 4096
 
 [websocket]
 # By default comet websocket listens for connections from all the network interfaces
