split client/server Ring proto

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -230,12 +230,19 @@ handshake.timeout 5s
 # write.timeout 5s
 write.timeout 5s
 
-# proto buffer num in one bucket for server/client send.
+# proto buffer num in one bucket for server send.
 #
 # Examples:
 #
 # svr.proto 100
-proto 100
+svr.proto 100
+
+# proto buffer num in one bucket for client send.
+#
+# Examples:
+#
+# svr.proto 100
+cli.proto 100
 
 [bucket]
 # bucket split N(num) instance from a big map into small map.
