unsupported http long pulling

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -166,30 +166,16 @@ writebuf.size 4096
 bind 0.0.0.0:8090
 
 # wheather needs open tls or not
-# if set true you must set the cert and private file configuration
-tls.open false
+# if set true you must set the cert and private file configuration, default false
+#tls.open false
 # It is available if tls.open set true
-tls.bind 0.0.0.0:8095
+#tls.bind 0.0.0.0:8095
 
 # generate certificate command:
 # openssl genrsa -out key.pem 2048
 # openssl req -new -x509 -key key.pem -out cert.pem -days 3650
-cert.file ../source/cert.pem
-private.file ../source/private.pem
-
-[http]
-# By default comet http listens for connections from all the network interfaces
-# available on the server on 8070 port. It is possible to listen to just one or 
-# multiple interfaces using the "bind" configuration directive, followed by 
-# one or more IP addresses and port.
-#
-# Examples:
-#
-# Note this directive is only support "websocket" protocol
-# bind 192.168.1.100:8070,10.0.0.1:8070
-# bind 127.0.0.1:8070
-# bind 0.0.0.0:8070
-bind localhost:8070
+#cert.file ../source/cert.pem
+#private.file ../source/private.pem
 
 [push]
 # comet service listen address
