--- a/logic/logic-example.conf
+++ b/logic/logic-example.conf
@@ -50,7 +50,7 @@ pprof.addrs localhost:7171
 # rpc.addrs 0.0.0.0:7171
 rpc.addrs tcp@localhost:7170
 
-http.addrs tcp@localhost:7172
+http.addrs tcp@0.0.0.0:7172
 
 http.read.timeout 5s
 http.write.timeout 5s
