--- a/logic/job/job-example.conf
+++ b/logic/job/job-example.conf
@@ -2,7 +2,7 @@
 log ./job-log.xml
 [kafka]
 zookeeper.list 127.0.0.1:2181
-#zookeeper.root /push_job
+#zkroot /push_job
 topic KafkaPushsTopic
 [comets]
 1 tcp@127.0.0.1:8092
