unsupported http long pulling

--- a/comet/client/client-example.conf
+++ b/comet/client/client-example.conf
@@ -52,7 +52,10 @@ log ./log.xml
 cert.file ../../source/cert.pem
 
 [proto]
-
+# select connections type
+# 0: tcp
+# 1: websocket
+# 2: websocket tls
 type 0
 
 # By default comet listens for connections from all the network interfaces
