suppost flash safe policy

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -177,6 +177,11 @@ bind 0.0.0.0:8090
 #cert.file ../source/cert.pem
 #private.file ../source/private.pem
 
+[flash]
+# flash safe policy listen
+#policy.open true
+#policy.bind 0.0.0.0:843
+
 [push]
 # comet service listen address
 #
@@ -191,15 +196,14 @@ rpc.addrs tcp@localhost:8092
 # Examples:
 #
 # num 8
-# num 8
+num 256
 
 # timer instance size
 #
 # Examples:
 #
 # size 1024
-size 10000
-
+size 2048
 
 [proto]
 # Sets the deadline for init handshake.
@@ -236,7 +240,7 @@ cli.proto 100
 # Examples:
 #
 # num 1024
-num 1024
+num 256
 
 # channel cache num
 #
@@ -265,7 +269,7 @@ channel 5
 # Examples:
 #
 # batch 20
-batch 20
+batch 40
 
 # room's signal push msgs duration 
 # Examples:
