SrcProto use chan

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -224,15 +224,15 @@ write.timeout 5s
 #
 # Examples:
 #
-# svr.proto 100
-svr.proto 100
+# svr.proto 80
+svr.proto 80
 
 # proto buffer num in one bucket for client send.
 #
 # Examples:
 #
-# svr.proto 100
-cli.proto 100
+# cli.proto 5
+cli.proto 5
 
 [bucket]
 # bucket split N(num) instance from a big map into small map.
@@ -256,13 +256,26 @@ channel 1024
 # room 1024
 room 1024
 
+# room-push goroutines amount in per bucket
+# 
+# Examples:
+#
+# routine.amount 128
+routine.amount 128
+
+# room-push goroutines chan size
+# 
+# Examples:
+#
+routine.size 20
+
 [room]
 # room's channel cache num
 #
 # Examples:
 #
 # channel 1024
-channel 5
+channel 128
 
 [logic]
 # logic service rpc address
