1.add slow log 2.fix new buffer in job

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -79,6 +79,12 @@ server.id 1
 # debug 1
 debug 1
 
+[slow]
+# push slow log
+log ./comet-slow.log
+# slow push time
+time 1s
+
 [tcp]
 # By default comet listens for connections from all the network interfaces
 # available on the server on 8080 port. It is possible to listen to just one or 
