add comet roomproc

--- a/logic/job/job-example.conf
+++ b/logic/job/job-example.conf
@@ -11,6 +11,20 @@ topic KafkaPushsTopic
 1 tcp@127.0.0.1:8092
 #2 127.0.0.2:8092
 
+[comet]
+# room-push goroutines amount in per bucket
+#
+# Examples:
+#
+# routine.amount 64
+routine.amount 64
+
+# room-push goroutines chan size
+#
+# Examples:
+#
+routine.size 20
+
 [push]
 chan 16
 chan.size 100
