--- a/logic/job/job-example.conf
+++ b/logic/job/job-example.conf
@@ -12,18 +12,24 @@ topic KafkaPushsTopic
 #2 127.0.0.2:8092
 
 [comet]
-# room-push goroutines amount in per bucket
+# comet rpc goroutines amount in per bucket
 #
 # Examples:
 #
 # routine.amount 64
 routine.amount 64
 
-# room-push goroutines chan size
+# comet rpc goroutines chan size
 #
 # Examples:
 #
 routine.size 20
+
+# comet rpc call chan size
+#
+# Examples:
+#
+call.size 100
 
 [push]
 chan 16
