update job conf.

--- a/logic/job/job-example.conf
+++ b/logic/job/job-example.conf
@@ -12,23 +12,25 @@ topic KafkaPushsTopic
 #2 127.0.0.2:8092
 
 [comet]
-# comet rpc goroutines amount in per bucket
+# comet rpc go routines size in per comet
 #
 # Examples:
 #
-# routine.amount 64
-routine.amount 64
+# routine.size 16
+routine.size 16
 
-# comet rpc goroutines chan size
+# comet rpc go routines chan size
 #
 # Examples:
 #
-routine.size 20
+# routine.chan 64
+routine.chan 64
 
 # comet rpc call chan size
 #
 # Examples:
 #
+# call.size 100
 call.size 100
 
 [push]
