add rpc client & call timeout.

--- a/logic/job/job-example.conf
+++ b/logic/job/job-example.conf
@@ -26,12 +26,19 @@ routine.size 16
 # routine.chan 64
 routine.chan 64
 
-# comet rpc call chan size
+# comet rpc call timeout
 #
 # Examples:
 #
-# call.size 100
-call.size 100
+# call.timeout 3s
+dial.timeout 5s
+
+# comet rpc call timeout
+#
+# Examples:
+#
+# call.timeout 3s
+call.timeout 3s
 
 [push]
 chan 16
