update job config.

--- a/logic/job/job-example.conf
+++ b/logic/job/job-example.conf
@@ -26,11 +26,11 @@ routine.size 16
 # routine.chan 64
 routine.chan 64
 
-# comet rpc call timeout
+# comet rpc dial timeout
 #
 # Examples:
 #
-# call.timeout 3s
+# dial.timeout 5s
 dial.timeout 5s
 
 # comet rpc call timeout
