update config comment.

--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -286,8 +286,9 @@ routine.size 20
 
 [logic]
 # logic service rpc address
+# set(logic1, logic2)
 #
 # Examples:
 #
-# rpc.addrs tcp@localhost:7170
+# rpc.addrs tcp@localhost:7170,tcp@localhost:7170
 rpc.addrs tcp@localhost:7170
