--- a/logic/job/job-example.conf
+++ b/logic/job/job-example.conf
@@ -8,6 +8,10 @@ topic KafkaPushsTopic
 
 [comets]
 # comet server address list
+#
+# Examples:
+#
+# 1 tcp@127.0.0.1:8092,tcp@127.0.0.1:8092
 1 tcp@127.0.0.1:8092
 #2 127.0.0.2:8092
 
