--- a/logic/logic-example.conf
+++ b/logic/logic-example.conf
@@ -71,6 +71,11 @@ dir ./
 log ./logic-log.xml
 
 [router.addrs]
+# router service rpc address
+#
+# Examples:
+#
+# rpc.addrs tcp@localhost:7270,tcp@localhost:7270
 1 tcp@localhost:7270
 #2 localhost:7271
 
