--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -292,3 +292,8 @@ routine.size 20
 #
 # rpc.addrs tcp@localhost:7170,tcp@localhost:7170
 rpc.addrs tcp@localhost:7170
+
+[monitor]
+# monitor listen
+open true
+addrs 0.0.0.0:7371
