update kafka config

--- a/logic/job/job-example.conf
+++ b/logic/job/job-example.conf
@@ -4,6 +4,7 @@ log ./job-log.xml
 [kafka]
 zookeeper.list 127.0.0.1:2181
 #zkroot /goim_job
+group kafka_topic_push_group
 topic KafkaPushsTopic
 
 [comets]
