remove idle room

--- a/logic/job/job-example.conf
+++ b/logic/job/job-example.conf
@@ -64,6 +64,12 @@ batch 40
 # signal 1s
 signal 1s
 
+# room's idle push msgs duration
+# Examples:
+#
+# idle 1h
+idle 1h
+
 [monitor]
 # monitor listen
 open true
