--- a/comet/comet-example.conf
+++ b/comet/comet-example.conf
@@ -192,6 +192,12 @@ bind 0.0.0.0:8090
 #cert.file ../source/cert.pem
 #private.file ../source/private.pem
 
+[socketio]
+bind 0.0.0.0:5000
+trans nil
+tls.open false
+tls.bind 0.0.0.0:5055
+
 [flash]
 # flash safe policy listen
 #policy.open true
