--- a/logic/logic-example.conf
+++ b/logic/logic-example.conf
@@ -83,6 +83,10 @@ log ./logic-log.xml
 topic KafkaPushsTopic
 addrs 127.0.0.1:9092,127.0.0.2:9092
 
+[cors]
+enable false
+addr *
+
 [monitor]
 # monitor listen
 open true
