--- a/cmd/job/job-example.toml
+++ b/cmd/job/job-example.toml
@@ -1,16 +1,14 @@
 # This is a TOML document. Boom
-perf = "0.0.0.0:8010"
-
 [env]
-    region = "hk"
-	zone = "hk001"
+    region = "sh"
+	zone = "sh001"
 	env = "dev"
 	host = "test"
 
 [discovery]
-	nodes = ["hk001.tony.wiki:7171"]
+	nodes = ["goim.tony.wiki:7171"]
 
 [kafka]
     topic = "goim-push-topic"
-    group = "goim-push-group"
+    group = "goim-push-group-job"
     brokers = ["127.0.0.1:9092"]
