--- a/cmd/logic/logic-example.toml
+++ b/cmd/logic/logic-example.toml
@@ -1,5 +1,12 @@
 # This is a TOML document. Boom
-perf = "0.0.0.0:8010"
+[env]
+    region = "sh"
+	zone = "sh001"
+	env = "dev"
+	host = "test"
+
+[discovery]
+	nodes = ["sh.tony.wiki:7171"]
 
 [regions]
     "bj" = ["北京","天津","河北","山东","山西","内蒙古","辽宁","吉林","黑龙江","甘肃","宁夏","新疆"]
@@ -7,13 +14,13 @@ perf = "0.0.0.0:8010"
     "gz" = ["广东","福建","广西","海南","湖南","四川","贵州","云南","西藏","香港","澳门"]
     
 [node]
-    defaultDomain = "goim.tony.wiki"
-    hostDomain = ".goim.tony.wiki"
+    defaultDomain = "sh.tony.wiki"
+    hostDomain = ".sh.tony.wiki"
     heartbeat = "30s"
 	heartbeatMax = 3
-    tcpPort = 8001
-    wsPort = 8002
-    wssPort = 8003
+    tcpPort = 3101
+    wsPort = 3102
+    wssPort = 3103
     regionWeight = 1.6
 
 [backoff]
@@ -22,18 +29,9 @@ perf = "0.0.0.0:8010"
     factor = 1.8
     jitter = 0.3
 
-[env]
-    region = "hk"
-	zone = "hk001"
-	env = "dev"
-	host = "test"
-
-[discovery]
-	nodes = ["hk001.tony.wiki:7171"]
-
 [rpcServer]
     network = "tcp"
-    addr = "0.0.0.0:8019"
+    addr = "0.0.0.0:3119"
     timeout = "1s"
 
 [rpcClient]
@@ -42,7 +40,7 @@ perf = "0.0.0.0:8010"
 
 [httpServer]
     network = "tcp"
-    addr = "0.0.0.0:8011"
+    addr = "0.0.0.0:3111"
 	readTimeout = "1s"
 	writeTimeout = "1s"
 
