--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,13 @@ notifications:
 services:
   - redis-server
 
-
 # Anything in before_script that returns a nonzero exit code will flunk the
 # build and immediately stop. It's sorta like having set -e enabled in bash.
 # Make sure golangci-lint is vendored.
 before_script:
-  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $GOPATH/bin
+  - curl -sfL https://raw.githubusercontent.com/Bilibili/discovery/master/install.sh | sh -s -- -b $GOPATH/bin
+  - curl -sfL https://raw.githubusercontent.com/Bilibili/discovery/master/cmd/discovery/discovery-example.toml -o $GOPATH/bin/discovery.toml
+  - curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $GOPATH/bin
   - wget http://apache.stu.edu.tw/kafka/2.1.0/kafka_2.11-2.1.0.tgz -O kafka.tgz
   - mkdir -p kafka && tar xzf kafka.tgz -C kafka --strip-components 1
   - nohup bash -c "cd kafka && bin/zookeeper-server-start.sh config/zookeeper.properties &"
@@ -45,8 +46,9 @@ before_script:
 # failing test, we want to see both. Configure golangci-lint with a
 # .golangci.yml file at the top level of your repo.
 script:
-  - golangci-lint run       # run a bunch of code checkers/linters in parallel
-  - sh codecov.sh            # Run all the tests with the race detector enabled
+  - discovery -conf $GOPATH/bin/discovery.toml  # run discovery service
+  - golangci-lint run                           # run a bunch of code checkers/linters in parallel
+  - sh codecov.sh                               # Run all the tests with the race detector enabled
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
