--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,9 @@ before_script:
   - curl -sfL https://raw.githubusercontent.com/Bilibili/discovery/master/install.sh | sh -s -- -b $GOPATH/bin
   - curl -sfL https://raw.githubusercontent.com/Bilibili/discovery/master/cmd/discovery/discovery-example.toml -o $GOPATH/bin/discovery.toml
   - nohup bash -c "$GOPATH/bin/discovery -conf $GOPATH/bin/discovery.toml &"
-  - script/jdk.sh
-  - script/zookeeper.sh
-  - script/kafka.sh
+  - Terry-Mao/goim/script/jdk.sh
+  - Terry-Mao/goim/script/zookeeper.sh 1 127.0.0.1:2181
+  - Terry-Mao/goim/script/kafka.sh 127.0.0.1 127.0.0.1:2181
   - sleep 5
   - $KAFKA_HOME/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic goim-push-topic --zookeeper localhost:2181
 
