--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,10 @@ before_script:
   - curl -sfL https://raw.githubusercontent.com/Bilibili/discovery/master/install.sh | sh -s -- -b $GOPATH/bin
   - curl -sfL https://raw.githubusercontent.com/Bilibili/discovery/master/cmd/discovery/discovery-example.toml -o $GOPATH/bin/discovery.toml
   - nohup bash -c "$GOPATH/bin/discovery -conf $GOPATH/bin/discovery.toml &"
-  - bash -c "$TRAVIS_BUILD_DIR/scripts/zk.sh 1 127.0.0.1:2181"
-  - bash -c "$TRAVIS_BUILD_DIR/scripts/kafka.sh 127.0.0.1 127.0.0.1:2181"
+  - wget https://www-us.apache.org/dist/kafka/2.1.0/kafka_2.12-2.1.0.tgz -O kafka.tgz
+  - mkdir -p kafka && tar xzf kafka.tgz -C kafka --strip-components 1
+  - nohup bash -c "cd kafka && bin/zookeeper-server-start.sh config/zookeeper.properties &"
+  - nohup bash -c "cd kafka && bin/kafka-server-start.sh config/server.properties &"
   - sleep 5
   - $KAFKA_HOME/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic goim-push-topic --zookeeper localhost:2181
 
