--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ before_script:
 # failing test, we want to see both. Configure golangci-lint with a
 # .golangci.yml file at the top level of your repo.
 script:
+  - make run
   - golangci-lint run   # run a bunch of code checkers/linters in parallel
   - sh codecov.sh       # Run all the tests with the race detector enabled
 
