--- a/cmd/logic/logic-example.toml
+++ b/cmd/logic/logic-example.toml
@@ -1,6 +1,6 @@
 # This is a TOML document. Boom
 [discovery]
-	nodes = ["127.0.0.1:7171"]
+    nodes = ["127.0.0.1:7171"]
 
 [regions]
     "bj" = ["北京","天津","河北","山东","山西","内蒙古","辽宁","吉林","黑龙江","甘肃","宁夏","新疆"]
@@ -8,10 +8,10 @@
     "gz" = ["广东","福建","广西","海南","湖南","四川","贵州","云南","西藏","香港","澳门"]
     
 [node]
-    defaultDomain = "connector.goim.io"
+    defaultDomain = "conn.goim.io"
     hostDomain = ".goim.io"
     heartbeat = "30s"
-	heartbeatMax = 3
+    eartbeatMax = 3
     tcpPort = 3101
     wsPort = 3102
     wssPort = 3103
@@ -43,12 +43,12 @@
     brokers = ["127.0.0.1:9092"]
 
 [redis]
-	network = "tcp"
-	addr = "127.0.0.1:6379"
-	active = 60000
-	idle = 32
-	dialTimeout = "50ms"
-	readTimeout = "500ms"
-	writeTimeout = "500ms"
-	idleTimeout = "30s"
-	expire = "30m"
+    network = "tcp"
+    addr = "127.0.0.1:6379"
+    active = 60000
+    idle = 32
+    dialTimeout = "50ms"
+    readTimeout = "500ms"
+    writeTimeout = "500ms"
+    idleTimeout = "30s"
+    expire = "30m"
