--- a/cmd/comet/comet-example.toml
+++ b/cmd/comet/comet-example.toml
@@ -1,12 +1,8 @@
 # This is a TOML document. Boom
-debug = true
-maxproc = 32
-
 [discovery]
     nodes = ["127.0.0.1:7171"]
 
 [rpcServer]
-    network = "tcp"
     addr = ":3109"
     timeout = "1s"
 
@@ -26,22 +22,20 @@ maxproc = 32
     writeBuf = 1024
     writeBufSize = 8192
 
-[webSocket]
+[websocket]
     bind = [":3102"]
     tlsOpen = false
     tlsBind = [":3103"]
     certFile = "../../cert.pem"
     privateFile = "../../private.pem"
 
-[timer]
+[protocol]
     timer = 32
     timerSize = 2048
-
-[protoSection]
-    handshakeTimeout = "8s"
-    writeTimeout = "8s"
     svrProto = 10
     cliProto = 5
+    handshakeTimeout = "8s"
+    heartbeatTimeout = "120s"
 
 [whitelist]
     Whitelist = [123]
